fix name margin on mobile

--- a/src/app/main/main.scss
+++ b/src/app/main/main.scss
@@ -74,7 +74,7 @@ section.first {
   h1 {
     font-family: 'Roboto';
     font-size: 7.5rem;
-    margin: 0;
+    margin-top: 20px;
   }
 
   h3 {
@@ -105,6 +105,10 @@ section.first {
       -webkit-box-align: center;
 
       align-items: center;
+    }
+
+    h1 {
+      margin: 0;
     }
 
     img {
